--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-
+    <header>
+            <button class="clearBoard">Clear Board</button>
+            <p> Etch-a-Sketch</p>
+            <button class="changeGrid">Change Grid</button>
+    </header>
     <div id='container'>
-
     </div>
     <script src="javascript.js"></script>
 </body>
