--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <button class="clearBoard">Clear Board</button>
-            <p> Etch-a-Sketch</p>
+            <h1> Etch-a-Sketch</h1>
             <button class="changeGrid">Change Grid</button>
     </header>
     <div id='container'>
